src/test/deca/syntax/valid/SO/lex/assignation.deca
// Description:
//    Programme vérifiant l'appartenance au lexique.
//
// Resultats:
//    
//
// Historique:
//    cree le 12/01/2022

{
    int x = 2;
    float y = x;
    String Xxx_34 = "34";
    z = 12;
}